--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                     </span>
                 </div>
             </div>
+            <button type="submit" id="sub">
+                Submit
+            </button>
         </form>
     </div>
     <script>
