--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                     <span id="q12">
                         <label for="taking-medicine">Taking medication?</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <label for="yes">Yes</label>&nbsp;
-                        <input type="radio" name="receiving-treatement" id="yesq12">&nbsp;&nbsp;&nbsp;&nbsp;
+                        <input type="radio" name="taking-medicine" id="yesq12">&nbsp;&nbsp;&nbsp;&nbsp;
                         <label for="no">No</label>&nbsp;
-                        <input type="radio" name="receiving-treatement" id="noq12">
+                        <input type="radio" name="taking-medicine" id="noq12">
                     </span>
                 </div>
                 <h3>Has your child ever suffered from : </h3>
